@@ -16,6 +16,9 @@
  - (dtucker) [configure.ac gss-serv-krb5.c ssh-gss.h] Define GSSAPI when found
    with krb5-config, hunt down gssapi.h and friends.  Based partially on patch
    from deengert at anl.gov.  ok djm@
+ - (djm) [groupaccess.c uidswap.c] Bug #787: Size group arrays at runtime 
+   using sysconf() if available Based on patches from 
+   holger AT van-lengerich.de and openssh_bugzilla AT hockin.org
 
 20040223
  - (dtucker) [session.c] Bug #789: Only make setcred call for !privsep in the
@@ -1919,4 +1922,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.3249 2004/02/23 23:58:10 dtucker Exp $
+$Id: ChangeLog,v 1.3250 2004/02/24 02:05:11 djm Exp $
